# EagleAgent

./: .dockerignore  .env.cloudrun.example  .env.docker.example  .env.example  .gitignore  CHAINLIT_DATA_LAYER_SETUP.md  CLOUD_RUN_DEPLOYMENT.md  CONTEXT_ARCHITECTURE.md  CROSS_THREAD_MEMORY.md  DEVELOPMENT_WORKFLOW.md  DOCKER_LOCAL_TESTING.md  Dockerfile  EagleAgent.code-workspace  FILE_ATTACHMENTS.md  FIRESTORE_TTL.md  GOOGLE_OAUTH_SETUP.md  MCP_INTEGRATION.md  README.md  TESTING.md  TEST_AUTO_MEMORY.md  app.py  chainlit.db  chainlit.md  clear_checkpoints.py  cloudbuild.yaml  copilot-instructions.md  debug_stream.py  docker-compose.yml  entrypoint.sh  firestore_store.py  force_delete_checkpoints.py  init_sqlite_db.py  input.css  kill.sh  kill_docker.sh  list_checkpoints.py  main.py  manage_user_profile.py  pyproject.toml  run.sh  (+16 more)
.chainlit/: config.toml
.github/: copilot-instructions.md
alembic/: env.py
config/: __init__.py  agents.yaml.example  mcp_servers.yaml.example  prompts.yaml.example  scripts.py  settings.py
docs/: AGENT_BRIDGE.md  CONTEXT_ARCHITECTURE.md  CROSS_THREAD_MEMORY.md  DEVELOPMENT_WORKFLOW.md  FILE_ATTACHMENTS.md  GOOGLE_OAUTH_SETUP.md  MCP_INTEGRATION.md  SERVER_SCRIPTS.md  TESTING.md  TEST_AUTO_MEMORY.md  supplier-categorization-taxonomy.md
https:/: mooball.com
includes/: __init__.py  actions.py  agent_bridge.py  dashboard_routes.py  db_models.py  firestore_store.py  gcs_storage_client.py  job_runner.py  local_storage_client.py  mcp_config.py  prompts.py  storage_utils.py  supplier_categorization.py  timestamped_firestore_saver.py
public/: embedded.js  stylesheet.css
scripts/: categorize_suppliers.py  categorize_suppliers_job.py  cleanup_old_files.py  clear_checkpoints.py  deduplicate_brands.py  diagnose_threads.py  extract_top_suppliers.py  fetch_netsuite_suppliers.py  force_delete_checkpoints.py  import_brands.py  import_data.py  import_products.py  import_purchase_history.py  import_quote_history.py  import_suppliers.py  init_sqlite_db.py  list_checkpoints.py  list_gemini_models.py  manage_user_profile.py  repair_threads.py  smoke_test_models.py  sync_prod_data.py  test_netsuite_auth.py  update_product_embeddings.py  update_supplier_embeddings.py  update_supplier_terms_contacts.py  verify_timestamps.py
templates/: admin.html  base.html  components.html  home.html  login.html  product_detail.html  products.html  purchases.html  rfq_detail.html  rfqs.html  supplier_detail.html  suppliers.html  users.html
tests/: conftest.py  test_actions.py  test_checkpoint_saver.py  test_dashboard_context.py  test_dashboard_routes.py  test_file_attachments.py  (+14 more)
(+100 files in other folders)
