[project]
name = "eagleagent"
version = "0.1.0"
description = "Agentic Helper for Eagle Exports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chainlit>=2.9.6",
    "google-cloud-firestore>=2.23.0",
    "greenlet>=3.3.2",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-firestore>=0.1.7",
    "sqlalchemy>=2.0.47",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
