[project]
name = "eagleagent"
version = "0.1.0"
description = "Agentic Helper for Eagle Exports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic~=1.18.4",
    "asyncpg~=0.31.0",
    "chainlit~=2.9.6",
    "fastapi>=0.115.0",
    "fastapi-sso>=0.17.0",
    "google-genai>=1.68.0",
    "greenlet~=3.3.2",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "langchain~=1.2.10",
    "langchain-google-genai~=4.2.1",
    "langchain-mcp-adapters~=0.2.1",
    "langgraph~=1.0.9",
    "langgraph-checkpoint-postgres~=3.0.4",
    "pandas>=3.0.1",
    "pdfplumber~=0.11.9",
    "pgvector>=0.4.2",
    "pillow~=12.1.1",
    "psycopg[binary]~=3.3.3",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.12.0",
    "sqlalchemy~=2.0.47",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
timeout = 30
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
